--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,14 @@
 {
   "manifest_version": 2,
 
-  "name": "ShaderBliss",
+  "name": "ShaderVision",
 
   "version": "1.0",
 
   "description": "Apply fragment shaders to web videos and images.",
 
   "icons": {
-    "16": "images/icon16-3.png",
+    "16": "images/icon16.png",
     "32": "images/icon32.png",
     "48": "images/icon48.png",
     "128": "images/icon128.png"
@@ -30,6 +30,7 @@
 
   "permissions": [
     "activeTab",
-    "storage"
+    "storage",
+    "contextMenus"
   ]
 }
